--- a/RESEARCH.org
+++ b/RESEARCH.org
@@ -64,9 +64,10 @@
 ** Plan: do the non-machine code ones first (vanilla interpreter, bytecode + VM interpreter), then try static compilation, then static JITs, then tracing JITs? Or if it's too hard to do a full static compile, just do VM interpreter + tracing JIT, as that's probably the least amount of machine code.
 
 * Resources
-http://home.pipeline.com/~hbaker1/LinearLisp.html
+https://web.archive.org/web/20200212080133/http://home.pipeline.com/~hbaker1/
 http://blog.reverberate.org/2012/12/hello-jit-world-joy-of-simple-jits.html?m=1
 
+https://www.cs.cornell.edu/~asampson/blog/flattening.html
 
 ## tests
 
@@ -93,3 +94,5 @@ https://github.com/schemedoc/cookbook
 https://www.gnu.org/software/guile/manual/html_node/Continuation_002dPassing-Style.html
 
 https://ecraven.github.io/r7rs-benchmarks/
+
+(Write your own tiny programming system(s)!)[https://d3s.mff.cuni.cz/teaching/nprg077/]
